--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
+    "recharts": "^3.0.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
