--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "Peeyush Gupta",
   "license": "ISC",
   "dependencies": {
+    "@vercel/node": "^5.3.6",
     "axios": "^1.3.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
